<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>chenyang</groupId>
	<artifactId>proxy</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>blink-agent</name>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-lang3</artifactId>
		  <version>3.3.2</version>
		</dependency>
		 <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.0.24.Final</version>
        </dependency>
		<dependency>
		  <groupId>com.google.guava</groupId>
		  <artifactId>guava</artifactId>
		  <version>18.0</version>
		</dependency>
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <version>1.14</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2</version>
        </dependency>
	</dependencies>
	
	<!-- by default -->
    <properties>
        <zookeeper.host>onebox</zookeeper.host>
        <log4j_level>debug</log4j_level>
        <log4j_maxfilesize>500MB</log4j_maxfilesize>
        <job>blink-agent</job>
    </properties>


    <profiles>
        <profile>
            <id>production</id>
            <activation>
                <property>
                    <name>production</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <zookeeper.host>production</zookeeper.host>
                <log4j_level>info</log4j_level>
                <log4j_maxfilesize>500MB</log4j_maxfilesize>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>jboss</id>
            <name>JBoss Repository</name>
            <url>http://repository.jboss.com/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>jboss</id>
            <name>JBoss Repository</name>
            <url>http://repository.jboss.com/maven2/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

	<build>
		<resources>
			<resource>
				<directory>
					${project.basedir}/src/main/resources
				</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		  <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <configuration>
                <archive>
                    <manifestEntries>
                        <Rose>*</Rose>
                         <Main-Class>com.chenyang.proxy.AgentMain</Main-Class>
                    </manifestEntries>
                </archive>
            </configuration>
        </plugin>
        <plugin>
		    <groupId>com.jolira</groupId>
		    <artifactId>onejar-maven-plugin</artifactId>
		    <version>1.4.4</version>
		    <executions>
		        <execution>
		            <configuration>
		                <attachToBuild>true</attachToBuild>
		                <classifier>onejar</classifier>
		            </configuration>
		            <goals>
		                <goal>one-jar</goal>
		            </goals>
		        </execution>
		    </executions>
		</plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>appassembler-maven-plugin</artifactId>
            <version>1.1.1</version>
            <configuration>
                <extraJvmArguments> -XX:+UseBiasedLocking -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:ParallelCMSThreads=8 -Xms12G -Xmx12G -Xmn5G -Xss256k -XX:PermSize=32m -XX:MaxPermSize=128m</extraJvmArguments>
                <programs>
                    <program>
                        <mainClass>com.chenyang.proxy.AgentMain</mainClass>
                        <name>agent.sh</name>
                    </program>
                </programs>
            </configuration>
        </plugin>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.5.1</version>
            <configuration>
                <source>1.6</source>
                <target>1.6</target>
                <encoding>UTF-8</encoding>
                <showDeprecation>true</showDeprecation>
            </configuration>
        </plugin>
		</plugins>
	</build>
</project>
